# readex

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md
benchmark/: Cargo.toml  README.md
benchmark/baseline/: results.json
benchmark/broad/: run_sweep.ps1
benchmark/corpus/: urls.tsv
benchmark/corpus/gold/: apple-fy2019-10k-item1.txt  apple-fy2025-10k-item1.txt  apple-wikipedia.txt  example-com.txt  gold.tsv  govuk-hmrc-2025-26-leadin.txt  govuk-hub.txt  morrison-wikipedia.txt
benchmark/corpus/snapshots/: 0a8d11a0ba2ed7cd.html  0d8e2588d2d1b931.html  0e657595b198c359.html  25a711d6ecb6768d.html  2ea386b478856ebc.html  39ca4af9befa0524.html  3b766ea17775d5f2.html  3d00ac8ea9abae79.html  3dbf9e15ef26c109.html  455761fa318c01ef.html  4f87da126dcc0f7a.html  507b9cdbe036bf58.html  5714710c8c9a3e8a.html  5f27add4419ace7c.html  65e1c5b5502a5c81.html  779af8542eafdd9d.html  78e3fc9fe5c86c8d.html  803b534a50a3f584.html  859b46bf108e3db4.html  8638632aa27b2f45.html  8670676aae5747a2.html  86df4d2e654952e4.html  8740577e8c7803f2.html  8d5cc5247b273722.html  9c64e8e3fcd844d4.html  9c8f49f04f792f81.html  9ec7aaf8edb71ac1.html  a604eb8a03efa82d.html  aa562fed8195cd92.html  ae2c2184beb6d264.html  cb6ee3ae74f2e4c2.html  d153da3363ba7cf1.html  d159708a94e68ab6.html  d71ec714e950bddf.html  de79cc5a2c3b5416.html  e1106c5e26712078.html  e339ce76eb1cba73.html  e6037cf1c861d089.html  eceb960849e96838.html  f405a9e3314e15da.html  (+1 more)
benchmark/fuzz/: harvest.py  manifest.jsonl
benchmark/oracles/: .gitignore  contract.schema.json
benchmark/oracles/fixtures/: article.html  empty.html  unicode-article.html
benchmark/oracles/readability-js/: README.md  body_text.mjs  package-lock.json  package.json  run.mjs  selftest.mjs
benchmark/oracles/trafilatura/: README.md  requirements.txt  run.py  selftest.py  trafilatura.cfg
benchmark/oracles/xpath_conformance/: conformance_probe.py
benchmark/src/: corpus.rs  crate_run.rs  main.rs  metrics.rs  oracle.rs  regression.rs  report.rs  score.rs
examples/: dump_tei.rs  m10_phase2f_parser_probe.py  m10_phase2f_parser_probe.rs  m10_phase2f_parser_probe_postclean.py  m10_phase2g_pipeline_trace.py  m10_phase2g_pipeline_trace.rs  m10_phase2h_endbr_probe.rs  m10_phase2h_trace.rs  m9_stage0_diff.rs  m9_stage5_round2_trace.rs  m9_stage5_trace.rs
src/: lib.rs
src/htmldate/: core.rs  extractors.rs  mod.rs  regex_catalogues.rs  settings.rs  utils.rs  validators.rs
src/readability/: clean.rs  dom.rs  grab_article.rs  helpers.rs  mark_data_tables.rs  metadata.rs  mod.rs  parse_int.rs  prep.rs  regexps.rs  scoring.rs
src/trafilatura/: baseline.rs  cleaning.rs  deduplication.rs  justext_core.rs  justext_stoplists.rs  main_extractor.rs  metadata.rs  metadata_jsonld.rs  metadata_url.rs  mod.rs  output.rs  readability_fork.rs  settings_constants.rs  utils.rs  xpath_engine.rs  xpaths_constants.rs
tests/: fuzz_diff.rs  htmldate_parity_gate.rs  parser_equivalence_gate.rs  similarity.rs  trafilatura_csv_gate.rs  trafilatura_equivalence_gate.rs  trafilatura_extract_content_gate.rs  trafilatura_extract_smoke.rs  trafilatura_json_gate.rs  trafilatura_markdown_gate.rs  trafilatura_tei_gate.rs  trafilatura_txt_gate.rs  trafilatura_xml_gate.rs  xpath_conformance.rs  xpath_constants_engine_coverage.rs
tests/common/: mod.rs
wrk_docs/: 2026.05.16 - BRIEF - mdrcel Differential Test Oracles.md  2026.05.17 - HLD - mdrcel Differential Test Harness.md  2026.05.17 - HLD - mdrcel Oracle Adapters V1.md  2026.05.17 - HLD - mdrcel Oracle Adapters V2.md  2026.05.17 - HLD - mdrcel Oracle Adapters V3.md  2026.05.17 - HLD - mdrcel Oracle Adapters V4.md  2026.05.17 - HLD - mdrcel Oracle Adapters V5.md  2026.05.17 - HLD - mdrcel Oracle Adapters.md  2026.05.18 - HLD - mdrcel Readability Port (M2).md  2026.05.19 - HLD - mdrcel Trafilatura Port (M3).md  2026.05.22 - BRIEF - mdrcel M8 Metadata Parity.md  2026.05.22 - HLD - mdrcel M9 Differential-Fuzz Hardening V1.md  2026.05.22 - HLD - mdrcel M9 Differential-Fuzz Hardening V2.md  2026.05.22 - HLD - mdrcel M9 Differential-Fuzz Hardening V3.md  2026.05.22 - HLD - mdrcel M9 Differential-Fuzz Hardening V4.md  2026.05.22 - HLD - mdrcel M9 Differential-Fuzz Hardening.md  2026.05.23 - HLD - M10 Phase 1 control-char port.md  2026.05.23 - HLD - M10 Phase 2C rescue pass.md  2026.05.23 - HLD - M10 Phase 2E html unescape and length cap.md  2026.05.23 - REPORT - M10 Phase 2 triage.md  2026.05.23 - REPORT - M10 Phase 2D re-triage.md  2026.05.23 - REPORT - M10 Phase 2F parser probe.md  2026.05.23 - REPORT - M9 Stage 5 round 1 triage.md  2026.05.24 - HLD - M11 Phase A parser pre-processor.md  2026.05.24 - HLD - M11 Phase B similarity oracle.md  2026.05.24 - HLD - M12 Broad Sweep Confidence Test.md  2026.05.24 - HLD - M12 WP1 harvester additions.md  2026.05.24 - HLD - M12 WP2 sweep harness.md  2026.05.24 - REPORT - M10 Phase 2G escalation.md  2026.05.24 - REPORT - M10 Phase 2H escalation.md  2026.05.26 - CC - Coverage Baseline Report.md  2026.05.26 - CC - Coverage Improvement Plan.md  2026.05.26 - CC - Coverage Push Status Report.md
wrk_docs/coverage_baseline/: analyze.py  analyze_prod.py  analyze_prod2.py  (+12 more)
wrk_journals/: 2026.05.17 - JRN - mdrcel Gold-Set Curation.md  2026.05.17 - JRN - mdrcel Harness Implementation.md  2026.05.18 - JRN - mdrcel M2 Readability Port.md  2026.05.19 - JRN - M3 autonomous overnight session.md  2026.05.19 - JRN - xpath_engine_gap_survey.md  2026.05.21 - JRN - M3 Stage 3-B divergence landscape.md  2026.05.21 - JRN - M3 Stage 3-B overnight cluster fixes.md  2026.05.21 - JRN - M3 forward push goal loop.md  2026.05.21 - JRN - M4 forward push goal loop.md  2026.05.21 - JRN - M5 forward push goal loop.md  2026.05.22 - JRN - M6 forward push goal loop.md  2026.05.22 - JRN - M7 forward push goal loop.md  2026.05.22 - JRN - M8 metadata parity.md  2026.05.22 - JRN - M9 Differential-Fuzz Hardening.md  2026.05.23 - JRN - M10 Post-Fuzz Fidelity Cleanup.md  2026.05.24 - JRN - M11 Metric Pivot and Parser Pre-Processor.md  2026.05.24 - JRN - M12 Broad Sweep Confidence Test.md
(+24 files in other folders)
