[workspace]
members = ["benchmark"]

[package]
name = "mdrcel"
# M2 Stage 1a (2026-05-18): 0.2.2 -> 0.3.0 MINOR. First *real* extraction
# behaviour: `extract`/`extract_with` now parse the HTML and run the
# Readability port (parse spine + scoring + single top-candidate), returning a
# populated `Ok(Extracted)` (with `title` + body `text`) for pages that yield
# an article instead of the M1 `ExtractError::NotImplemented` floor. This is a
# **backward-compatible behaviour addition** (no public type/signature change;
# `ExtractError` unchanged; `extract == extract_with(&Options::default())`
# invariant preserved; an empty extraction is still a valid `Ok` per Bug-E2),
# so per semver (CLAUDE.md "Version management") it is a MINOR bump: new
# functionality behind the existing frozen surface, nothing removed or broken.
# (Stage 0's 0.2.1->0.2.2 was a PATCH precisely because no behaviour was
# observable then; that condition no longer holds.)
#
# M2 Stage 1b (2026-05-18): 0.3.0 -> 0.3.1 PATCH. `_grabArticle` now completes
# the sibling-append block (`Readability.js:1415-1535`) it deliberately
# STOPPED before at Stage 1a — preambles / content split by ads / qualifying
# `<p>`/scored siblings are appended to the article. This MATURES the
# already-shipped extraction behaviour behind the SAME frozen public surface:
# no new public type/function/signature, `ExtractError` unchanged,
# `extract == extract_with(&Options::default())` preserved, an empty
# extraction still a valid `Ok` (Bug-E2). Per semver (CLAUDE.md "Version
# management") that is a PATCH — an internal behaviour refinement of an
# already-public capability, nothing added to or removed from the API (Stage
# 1a was MINOR because it introduced the *first* real extraction; 1b only
# extends that same already-public behaviour, so it is a PATCH not a MINOR).
#
# M2 Stage 1c (2026-05-18): 0.3.1 -> 0.3.2 PATCH. `_grabArticle` now completes
# the outer `while (true)` retry/flag-sieve machinery it deliberately STOPPED
# before at Stage 1b: the `textLength < _charThreshold` trigger
# (`Readability.js:1546`, threshold 500 per `:133`/`:54`), the
# `FLAG_STRIP_UNLIKELYS`→`FLAG_WEIGHT_CLASSES`→`FLAG_CLEAN_CONDITIONALLY` flag
# sieve (`:1556-1561`), `_attempts` bookkeeping + the longest-text fallback
# (`:1562-1575`), and the `neededToCreateTopCandidate` page-wrap
# (`:1517-1532`, deferred at 1b as text_content-invariant — now ported, still
# text_content-invariant). Per HLD §m-3 each retry attempt **re-parses the
# original HTML bytes** (the JS `page.innerHTML = pageCacheHtml` reset; faithful
# because re-running the deterministic pre-grab pipeline reconstructs the
# identical post-`_prepDocument` tree, while avoiding deep-cloning the
# `Rc`-keyed score side-tables — a fresh ABA surface, HLD §5.1). This MATURES
# the already-shipped extraction behaviour behind the SAME frozen public
# surface: NO new public type/function/signature, `ExtractError` unchanged,
# `extract == extract_with(&Options::default())` preserved, an empty
# extraction still a valid `Ok` (Bug-E2 — the `parse() == None` boundary moved
# to faithful RJS parity, but `lib.rs` still maps `None` → empty `Ok`, so the
# PUBLIC `extract` contract is byte-unchanged). The retry fires ONLY when an
# attempt's text < 500 chars and then converges toward Readability-JS (the JS
# sieve's designed purpose) — same observable output on the overwhelming
# majority of docs (their attempt-0 text is far over 500). Per semver
# (CLAUDE.md) that is a PATCH — an internal behaviour refinement / completion
# of an already-public capability, nothing added to or removed from the API
# (1a MINOR = first real extraction; 1b/1c extend that same already-public
# behaviour → PATCH).
#
# M2 Stage 2 (2026-05-18): 0.3.2 -> 0.3.3 PATCH. Completes the full faithful
# `_prepArticle` (`Readability.js:782-884`) Stage 1c left as a near-noop
# (`prep_article_stage1a`): `_markDataTables` + `_getRowAndColumnCount` (with
# the JS-faithful `parse_int_js` helper, HLD §9/M-6), `_cleanConditionally`
# (the complete shadiness checklist incl. the data-table KEEP, ancestor-table
# KEEP, ancestor-code KEEP, image-gallery exception), `_cleanHeaders`,
# `_cleanStyles`, `_cleanMatchedNodes` (share-strip), `_getTextDensity`,
# single-cell-`<table>` unwrap, `<h1>`→`<h2>` retag, `<br>`-before-`<p>`
# removal. The page-wrap / `_prepArticle` order is now the JS order exactly
# (`_prepArticle` at `Readability.js:1512` BEFORE page-wrap at `:1517-1532`)
# — Stage 1c's swap was invariant for the Stage-1a `_prepArticle` slice but
# NOT under the full Stage-2 `_cleanConditionally` whose
# `_hasAncestorTag(_, "code", 3)` window is sensitive to the extra page-wrap
# div. **HLD §4 anti-inversion**: the data-table KEEP clauses
# (`Readability.js:2461-2463`, `:2466-2468`) deliberately preserve marked
# data tables; this Stage matches RJS exactly on table-heavy EDGAR/HMRC
# inputs, never out-cleans (HLD §4 — out-cleaning RJS is inversion). The
# Stage-1c-era over-inclusion of `[edit]`/navbox/hatnotes (Wikipedia), gov.uk
# nav, cnbc nav etc. — chrome NOT scored as data tables and so removed by
# `_cleanConditionally` — converges toward RJS. NO new public
# type/function/signature, `ExtractError` unchanged, `extract ==
# extract_with(&Options::default())` preserved, Bug-E2 preserved. Per semver
# (CLAUDE.md) PATCH — an internal behaviour refinement / completion of an
# already-public capability (`_prepArticle` was already running, just as
# `prep_article_stage1a`; Stage 2 expands it to the full JS scope without
# touching the API), matching the Stage-1b/1c precedent. The
# public-observable default-`extract` does shift (more chrome stripped on
# many real docs — converging to RJS), but the same shift class held for
# 1b/1c. If a future reviewer wants MINOR for behavioural-shift visibility,
# the rationale supports either; PATCH is recorded.
version = "0.3.3"
edition = "2024"

[dependencies]
# DEC-3 (M1): the library was a zero-dependency crate at the Milestone-1 floor;
# `thiserror` was deliberately omitted (hand-written `Display`/`Error` in
# `src/lib.rs`) and `scraper`/`html5ever`/`regex` were deferred "until the
# extraction algorithm needs them". M2 Stage 0 is exactly that point for the
# HTML parser: the Readability port is irreducibly a tree-rewriting algorithm
# over a spec-compliant HTML5 DOM (HLD §3), so the parser dependency is now
# load-bearing, not speculative. `thiserror` stays deferred (Stage 4 grows
# `ExtractError`).
#
# HLD §3 / §3.1 dependency decision (pinned EXACTLY; `Cargo.lock` committed):
#   html5ever 0.39 + markup5ever_rcdom 0.39 + tendril 0.5, verified to build on
#   rustc 1.95.0 / edition 2024 (the toolchain in use here — confirmed).
#
# HONEST DEPENDENCY-COST RECORD (HLD §3.1, supervisor M-2 — recorded
# deliberately, NOT glossed): `markup5ever_rcdom` is published as
# `+unofficial` and self-describes as *"Basic, unsupported DOM structure for
# use by tests in html5ever/xml5ever"* — i.e. test-support, not a supported
# public DOM. It is adopted with eyes open because the alternative is
# hand-writing a spec-compliant HTML5 parser + mutable DOM (the speculative
# path, not the conservative one). The transitive graph is ~36 crates incl.
# `xml5ever` / `web_atoms` which this port does NOT use; the architect plan's
# "minimal transitive graph" phrasing is withdrawn — the honest figure is
# stated, not hidden.
#
# KUCHIKIKI FALLBACK CRITERION (HLD §3 / §3.1 / §6 / M-2): if rcdom's
# `Rc<RefCell>` borrow management blocks Stage 0 (a `RefCell` borrow held
# across a tree mutation that cannot be refactored away behind the facade),
# switch the substrate to `kuchikiki` — same algorithm, same html5ever,
# **zero plan change**. Stage 0 did NOT hit this; the facade returns owned
# `Handle` clones and never holds a borrow across a mutation.
#
# VERSION-BUMP FENCE (HLD §3.1): any bump of html5ever / markup5ever_rcdom /
# tendril MUST re-run the §6.1 parser-equivalence BLOCKER gate before merge,
# and the bump commit MUST state the gate was re-run green.
html5ever = "=0.39.0"
markup5ever_rcdom = "=0.39.0"
tendril = "=0.5.0"

# M2 Stage 1a (2026-05-18): the Readability port reaches the point DEC-3
# anticipated for `regex` ("deferred until the extraction algorithm needs
# them"). `Readability.js`'s `REGEXPS` table (137-175) is load-bearing on the
# scored path (`_grabArticle`'s unlikely-candidate strip, `_getClassWeight`,
# `_getArticleTitle`). HLD §8 mandates these be ported with **explicit
# JS-compatible character classes** in a real regex engine (it specifies Rust
# `regex` syntax such as `(?-u:\W)` and confirms there are NO backreferences /
# lookaround anywhere in `REGEXPS`, so the `regex` crate is expressively
# sufficient and `fancy-regex` is explicitly NOT needed). Hand-rolling a
# matcher for e.g. `negative`'s `^hid$| hid$| hid |^hid ` alternation would be
# *more* code and a fresh correctness-divergence surface than a pinned,
# audited dependency — the conservative path, per the same reasoning DEC-3
# applied to the parser. Pinned EXACTLY (project new-dependency discipline);
# `regex 1.12.3` is consistent with the `regex-syntax 0.8.10` already in the
# committed `Cargo.lock`. `regex` is a pure-algorithm dependency and is NOT
# under the HLD §3.1 parser-equivalence version-bump fence (that fence governs
# only html5ever / markup5ever_rcdom / tendril).
regex = "=1.12.3"

[dev-dependencies]
# Test-scaffolding ONLY (never linked into the shipped library — CLAUDE.md
# "Tests are scaffolding"). Used by `tests/parser_equivalence_gate.rs` (the
# HLD §6.1 BLOCKER gate) to reproduce the harness tokenizer
# (`benchmark/src/metrics.rs::tokens`) EXACTLY: `split(char::is_whitespace) ->
# drop-empty -> to_lowercase -> NFC`. NFC requires `unicode-normalization`;
# version pinned to "0.1" to match `benchmark/Cargo.toml` so the gate's
# tokeniser is bit-identical to the harness's (HLD §6.1 requires *the harness
# tokenizer semantics*, not an approximation). The gate self-checks this
# mirror against hand-derived vectors so any future drift fails loudly.
unicode-normalization = "0.1"
