[workspace]
members = ["benchmark"]

[package]
name = "mdrcel"
# M2 Stage 1a (2026-05-18): 0.2.2 -> 0.3.0 MINOR. First *real* extraction
# behaviour: `extract`/`extract_with` now parse the HTML and run the
# Readability port (parse spine + scoring + single top-candidate), returning a
# populated `Ok(Extracted)` (with `title` + body `text`) for pages that yield
# an article instead of the M1 `ExtractError::NotImplemented` floor. This is a
# **backward-compatible behaviour addition** (no public type/signature change;
# `ExtractError` unchanged; `extract == extract_with(&Options::default())`
# invariant preserved; an empty extraction is still a valid `Ok` per Bug-E2),
# so per semver (CLAUDE.md "Version management") it is a MINOR bump: new
# functionality behind the existing frozen surface, nothing removed or broken.
# (Stage 0's 0.2.1->0.2.2 was a PATCH precisely because no behaviour was
# observable then; that condition no longer holds.)
#
# M2 Stage 1b (2026-05-18): 0.3.0 -> 0.3.1 PATCH. `_grabArticle` now completes
# the sibling-append block (`Readability.js:1415-1535`) it deliberately
# STOPPED before at Stage 1a — preambles / content split by ads / qualifying
# `<p>`/scored siblings are appended to the article. This MATURES the
# already-shipped extraction behaviour behind the SAME frozen public surface:
# no new public type/function/signature, `ExtractError` unchanged,
# `extract == extract_with(&Options::default())` preserved, an empty
# extraction still a valid `Ok` (Bug-E2). Per semver (CLAUDE.md "Version
# management") that is a PATCH — an internal behaviour refinement of an
# already-public capability, nothing added to or removed from the API (Stage
# 1a was MINOR because it introduced the *first* real extraction; 1b only
# extends that same already-public behaviour, so it is a PATCH not a MINOR).
#
# M2 Stage 1c (2026-05-18): 0.3.1 -> 0.3.2 PATCH. `_grabArticle` now completes
# the outer `while (true)` retry/flag-sieve machinery it deliberately STOPPED
# before at Stage 1b: the `textLength < _charThreshold` trigger
# (`Readability.js:1546`, threshold 500 per `:133`/`:54`), the
# `FLAG_STRIP_UNLIKELYS`→`FLAG_WEIGHT_CLASSES`→`FLAG_CLEAN_CONDITIONALLY` flag
# sieve (`:1556-1561`), `_attempts` bookkeeping + the longest-text fallback
# (`:1562-1575`), and the `neededToCreateTopCandidate` page-wrap
# (`:1517-1532`, deferred at 1b as text_content-invariant — now ported, still
# text_content-invariant). Per HLD §m-3 each retry attempt **re-parses the
# original HTML bytes** (the JS `page.innerHTML = pageCacheHtml` reset; faithful
# because re-running the deterministic pre-grab pipeline reconstructs the
# identical post-`_prepDocument` tree, while avoiding deep-cloning the
# `Rc`-keyed score side-tables — a fresh ABA surface, HLD §5.1). This MATURES
# the already-shipped extraction behaviour behind the SAME frozen public
# surface: NO new public type/function/signature, `ExtractError` unchanged,
# `extract == extract_with(&Options::default())` preserved, an empty
# extraction still a valid `Ok` (Bug-E2 — the `parse() == None` boundary moved
# to faithful RJS parity, but `lib.rs` still maps `None` → empty `Ok`, so the
# PUBLIC `extract` contract is byte-unchanged). The retry fires ONLY when an
# attempt's text < 500 chars and then converges toward Readability-JS (the JS
# sieve's designed purpose) — same observable output on the overwhelming
# majority of docs (their attempt-0 text is far over 500). Per semver
# (CLAUDE.md) that is a PATCH — an internal behaviour refinement / completion
# of an already-public capability, nothing added to or removed from the API
# (1a MINOR = first real extraction; 1b/1c extend that same already-public
# behaviour → PATCH).
#
# M2 Stage 2 (2026-05-18): 0.3.2 -> 0.3.3 PATCH. Completes the full faithful
# `_prepArticle` (`Readability.js:782-884`) Stage 1c left as a near-noop
# (`prep_article_stage1a`): `_markDataTables` + `_getRowAndColumnCount` (with
# the JS-faithful `parse_int_js` helper, HLD §9/M-6), `_cleanConditionally`
# (the complete shadiness checklist incl. the data-table KEEP, ancestor-table
# KEEP, ancestor-code KEEP, image-gallery exception), `_cleanHeaders`,
# `_cleanStyles`, `_cleanMatchedNodes` (share-strip), `_getTextDensity`,
# single-cell-`<table>` unwrap, `<h1>`→`<h2>` retag, `<br>`-before-`<p>`
# removal. The page-wrap / `_prepArticle` order is now the JS order exactly
# (`_prepArticle` at `Readability.js:1512` BEFORE page-wrap at `:1517-1532`)
# — Stage 1c's swap was invariant for the Stage-1a `_prepArticle` slice but
# NOT under the full Stage-2 `_cleanConditionally` whose
# `_hasAncestorTag(_, "code", 3)` window is sensitive to the extra page-wrap
# div. **HLD §4 anti-inversion**: the data-table KEEP clauses
# (`Readability.js:2461-2463`, `:2466-2468`) deliberately preserve marked
# data tables; this Stage matches RJS exactly on table-heavy EDGAR/HMRC
# inputs, never out-cleans (HLD §4 — out-cleaning RJS is inversion). The
# Stage-1c-era over-inclusion of `[edit]`/navbox/hatnotes (Wikipedia), gov.uk
# nav, cnbc nav etc. — chrome NOT scored as data tables and so removed by
# `_cleanConditionally` — converges toward RJS. NO new public
# type/function/signature, `ExtractError` unchanged, `extract ==
# extract_with(&Options::default())` preserved, Bug-E2 preserved. Per semver
# (CLAUDE.md) PATCH — an internal behaviour refinement / completion of an
# already-public capability (`_prepArticle` was already running, just as
# `prep_article_stage1a`; Stage 2 expands it to the full JS scope without
# touching the API), matching the Stage-1b/1c precedent. The
# public-observable default-`extract` does shift (more chrome stripped on
# many real docs — converging to RJS), but the same shift class held for
# 1b/1c. If a future reviewer wants MINOR for behavioural-shift visibility,
# the rationale supports either; PATCH is recorded.
#
# M2 Stage 3 (2026-05-18): 0.3.3 -> 0.3.4 PATCH. Adds the three remaining
# Stage-3 ports HLD §7.5 names: `_simplifyNestedElements`
# (`Readability.js:537-565`), `_fixLazyImages` (`:2332-2412`, wired into
# `_prepArticle`'s `:790` slot), and the CSSOM-faithful `!important`
# stripping in `_isProbablyVisible`'s inline-style probe (`:2697-2698`).
# `_postProcessContent`'s structural half (`:281-291`,
# `_simplifyNestedElements`) is now wired between `_grabArticle` and the
# `textContent` capture (`:2754`/`:2766`). The `aria-modal`/`role=dialog`
# check the brief named was already ported in `_grabArticle`'s main loop
# (`grab_article.rs:192-198`, `Readability.js:1073-1079`) — no work needed.
#
# **Word-count parity preserved (token-sequence invariant).** All 50 scored
# corpus URLs have **byte-identical word counts** to Stage 2 (`crate_wc`
# unchanged on every URL; ZERO crate_wc diffs). The harness `edit_sim` over
# token sequences is also unchanged on every URL.
# `_simplifyNestedElements` is token-sequence-invariant by construction
# (the only branch that touches `#text` descendants is the
# `_isElementWithoutContent` removal, which removes JS-whitespace-only
# content the harness tokenizer collapses anyway), so the scored Coverage
# numbers do not move. The bankofengland 4-word residual
# (`crate_wc` 796 vs RJS 800) is **unchanged** — investigated and recorded
# as a faithful divergence (the cookie-notice text RJS keeps but the
# crate strips, and the page-last-updated / MPC announcements section
# the crate keeps but RJS strips, both attributable to `_grabArticle`
# top-candidate selection on a regulator hub page; no Readability.js line
# closes it without out-cleaning RJS in one direction or tuning the
# unlikely-candidate regex in the other — HLD §4 anti-inversion forbids
# both).
#
# **Raw-byte convergence (Stage-3 bonus, recorded honestly).** Crate↔RJS
# raw `textContent` byte-equality rose from **29/51 to 50/51** on the
# corpus — `_simplifyNestedElements` normalises the JS-whitespace pattern
# in raw bytes to match RJS (which runs the same JS function). Token-
# stability is the load-bearing harness invariant; byte convergence is
# bonus evidence that the port is JS-faithful at the raw-`textContent`
# level too. The remaining diverging URL is bankofengland (the same 4-word
# residual on a different observed surface).
#
# Per semver (CLAUDE.md) PATCH — internal behaviour refinement / completion
# of an already-public capability behind the same frozen public surface: NO
# new public type/function/signature, `ExtractError` unchanged,
# `extract == extract_with(&Options::default())` preserved, Bug-E2
# preserved. The public-observable default `extract` does NOT shift its
# token output on any scored URL (zero `crate_wc` changes); only raw-byte
# `textContent` whitespace normalises. PATCH is correct.
#
# M2 Stage 4 (2026-05-18): 0.3.4 -> 0.4.0 MINOR. Stage 4 (HLD §7.6) lands
# the **last** scheduled M2 implementation work: full faithful port of
# `_getArticleMetadata` (`Readability.js:1757-1863`) + `_getJSONLD`
# (`Readability.js:1632-1747`, incl. the `@graph` resolution `:1674-1678`
# that Stage 1a deferred); wiring `Options.include_html` to the JS
# `_serializer(articleContent)` (`Readability.js:2772`); wiring
# `Options.min_word_count` as a threshold check that fires a NEW
# `ExtractError::ContentTooShort { word_count, threshold }` variant. The
# `Extracted` struct gains five additive metadata fields
# (`byline`/`excerpt`/`site_name`/`published_time`/`dir`), all `Option`-
# valued and defaulted via `#[derive(Default)]` so any consumer using
# `..Default::default()` struct-literal upgrade-paths compiles without
# explicit field listings.
#
# Per semver (CLAUDE.md "Version management") this is a **MINOR** bump:
# - **New public API** (additive only): a new `ExtractError::
#   ContentTooShort` variant; five new `Extracted` fields with `Option`
#   default values; a `Readability::include_html` builder method on the
#   `#[doc(hidden)] pub mod readability` infrastructure surface.
# - **Backward-compatible**: every previously-`None` field stays `None`
#   under default `Options`; `extract == extract_with(&Options::default())`
#   pinned and preserved (`min_word_count == 0` short-circuits the new
#   threshold check so the default path never produces the new
#   ExtractError variant — `extract()` cannot return an error on the
#   default path); Bug-E2 preserved (an empty extraction is still
#   `Ok(text: "")` on default-Options).
# - **Honest non-additive aspect** (the Rust-mechanical one): adding fields
#   to `pub struct Extracted` is **structurally additive** at the type
#   level (matches with `..` still work, methods still work) but **breaks
#   external struct-literal construction** that listed all fields. The
#   only known external construction sites are the in-workspace
#   `benchmark/` test helpers, which Stage 4 minimally updated to use
#   `..Extracted::default()` — a mechanical one-line change per site that
#   keeps their original semantics intact. Documented in the test helper
#   doc-comments themselves.
# - **No `ExtractError` variant was REMOVED** (the existing
#   `NotImplemented` is retained for forward-compatibility, just as Stage
#   1a kept it after extraction landed); a removal would have been MAJOR.
#
# The harness's compile-fence (anti-Bug-E2; `benchmark/src/crate_run.rs:
# 240-259`) was the documented Stage-4 fence-firing event — adding the
# new `ContentTooShort` variant broke its no-wildcard exhaustive match,
# and a conscious arm was added per its doctrine. The new arm maps to
# `CrateStatus::CrateError("content_too_short: …")` (justified inline in
# `crate_run.rs`; the harness corpus path uses `Options::default()` so
# this variant CANNOT fire on the corpus run, but consumers configuring
# `min_word_count > 0` get a well-formed error reason). The harness
# `crate ok:51` is unchanged on the corpus run.
#
# **No scored-text shift on default path** — `extract` / `extract_with(
# default)` behaviour is byte-identical for `Extracted.text` /
# `Extracted.word_count` versus Stage 3 across the 51-URL corpus (50/51
# RJS word-count parity preserved; bankofengland 4-word residual
# unchanged). The new metadata fields populate where the source HTML
# carries the relevant `<meta>` / JSON-LD / `<link>` / `<html lang>`
# nodes, and stay `None` otherwise.
#
# JSON-LD parsing requires a JSON parser (`JSON.parse` analogue). The
# `serde_json` dependency is pinned EXACTLY at `1.0.149` (already in
# workspace `Cargo.lock` via `benchmark`), pure-algorithm, no I/O —
# faithful per HLD §3 "deferred until the algorithm needs them" /
# DEC-3 reasoning, mirroring the `regex` Stage-1a precedent.
#
# M3 Stage 0a (2026-05-19): 0.4.0 -> 0.4.1 PATCH. Three additive helpers
# land on `dom.rs`'s `#[doc(hidden)] pub mod readability` infrastructure
# surface (HLD M3 §5.1 / §6.0): `tail(elem) -> Option<String>`,
# `Dom::delete_with_tail_preserve(elem)`, and
# `Dom::document_order_triplets(root) -> Vec<(NodeRef, Option<String>,
# Option<String>)>`. They implement lxml `Element.tail` /
# `etree.strip_elements`-with-tail-preserve / `ElementTree.iter()`
# semantics needed by the M3 Trafilatura port's `xmltotxt`, `prune_html`
# and `convert_tags` Stages (Stages 1b / 2 / 3). NO documented public
# API change: `extract` / `extract_with` / `Extracted` / `Options` /
# `ExtractError` are byte-unchanged; the M2 parser-equivalence BLOCKER
# gate (`tests/parser_equivalence_gate.rs`) still passes against the
# byte-identical-to-commit-149c686 oracle. Per semver (CLAUDE.md
# "Version management") PATCH — additive helpers behind the same
# `#[doc(hidden)]` infrastructure surface, no observable change on the
# default extraction path.
version = "0.4.1"
edition = "2024"

[dependencies]
# DEC-3 (M1): the library was a zero-dependency crate at the Milestone-1 floor;
# `thiserror` was deliberately omitted (hand-written `Display`/`Error` in
# `src/lib.rs`) and `scraper`/`html5ever`/`regex` were deferred "until the
# extraction algorithm needs them". M2 Stage 0 is exactly that point for the
# HTML parser: the Readability port is irreducibly a tree-rewriting algorithm
# over a spec-compliant HTML5 DOM (HLD §3), so the parser dependency is now
# load-bearing, not speculative. `thiserror` stays deferred (Stage 4 grows
# `ExtractError`).
#
# HLD §3 / §3.1 dependency decision (pinned EXACTLY; `Cargo.lock` committed):
#   html5ever 0.39 + markup5ever_rcdom 0.39 + tendril 0.5, verified to build on
#   rustc 1.95.0 / edition 2024 (the toolchain in use here — confirmed).
#
# HONEST DEPENDENCY-COST RECORD (HLD §3.1, supervisor M-2 — recorded
# deliberately, NOT glossed): `markup5ever_rcdom` is published as
# `+unofficial` and self-describes as *"Basic, unsupported DOM structure for
# use by tests in html5ever/xml5ever"* — i.e. test-support, not a supported
# public DOM. It is adopted with eyes open because the alternative is
# hand-writing a spec-compliant HTML5 parser + mutable DOM (the speculative
# path, not the conservative one). The transitive graph is ~36 crates incl.
# `xml5ever` / `web_atoms` which this port does NOT use; the architect plan's
# "minimal transitive graph" phrasing is withdrawn — the honest figure is
# stated, not hidden.
#
# KUCHIKIKI FALLBACK CRITERION (HLD §3 / §3.1 / §6 / M-2): if rcdom's
# `Rc<RefCell>` borrow management blocks Stage 0 (a `RefCell` borrow held
# across a tree mutation that cannot be refactored away behind the facade),
# switch the substrate to `kuchikiki` — same algorithm, same html5ever,
# **zero plan change**. Stage 0 did NOT hit this; the facade returns owned
# `Handle` clones and never holds a borrow across a mutation.
#
# VERSION-BUMP FENCE (HLD §3.1): any bump of html5ever / markup5ever_rcdom /
# tendril MUST re-run the §6.1 parser-equivalence BLOCKER gate before merge,
# and the bump commit MUST state the gate was re-run green.
html5ever = "=0.39.0"
markup5ever_rcdom = "=0.39.0"
tendril = "=0.5.0"

# M2 Stage 1a (2026-05-18): the Readability port reaches the point DEC-3
# anticipated for `regex` ("deferred until the extraction algorithm needs
# them"). `Readability.js`'s `REGEXPS` table (137-175) is load-bearing on the
# scored path (`_grabArticle`'s unlikely-candidate strip, `_getClassWeight`,
# `_getArticleTitle`). HLD §8 mandates these be ported with **explicit
# JS-compatible character classes** in a real regex engine (it specifies Rust
# `regex` syntax such as `(?-u:\W)` and confirms there are NO backreferences /
# lookaround anywhere in `REGEXPS`, so the `regex` crate is expressively
# sufficient and `fancy-regex` is explicitly NOT needed). Hand-rolling a
# matcher for e.g. `negative`'s `^hid$| hid$| hid |^hid ` alternation would be
# *more* code and a fresh correctness-divergence surface than a pinned,
# audited dependency — the conservative path, per the same reasoning DEC-3
# applied to the parser. Pinned EXACTLY (project new-dependency discipline);
# `regex 1.12.3` is consistent with the `regex-syntax 0.8.10` already in the
# committed `Cargo.lock`. `regex` is a pure-algorithm dependency and is NOT
# under the HLD §3.1 parser-equivalence version-bump fence (that fence governs
# only html5ever / markup5ever_rcdom / tendril).
regex = "=1.12.3"

# M2 Stage 4 (2026-05-18): full `_getArticleMetadata` (`Readability.js:1757-
# 1863`) calls `_getJSONLD` (`Readability.js:1632-1747`), which does
# `JSON.parse(textContent)` on every `<script type="application/ld+json">`. We
# need to faithfully parse arbitrary JSON, the SAME data shape JS `JSON.parse`
# produces (numbers, strings, booleans, null, arrays, objects), and walk it
# (`parsed["@type"]`, `parsed["@context"]["@vocab"]`, `parsed["@graph"]`,
# `parsed.author.name`, `parsed.publisher.name`, …). Hand-rolling a JSON parser
# would be **more** code and a fresh correctness-divergence surface than a
# pinned, audited dependency — same reasoning DEC-3 applied to `html5ever`
# and Stage 1a applied to `regex`. `serde_json` is pure-algorithm (no I/O),
# already in the workspace `Cargo.lock` via the `benchmark` crate, and is the
# obvious idiomatic choice. Pinned EXACTLY per project new-dependency
# discipline; `serde_json 1.0.149` is consistent with the version already in
# `Cargo.lock`. The brief-mandated "no I/O in the crate" property is
# preserved (parsing JSON in-memory is computation, not I/O).
serde_json = "=1.0.149"

[dev-dependencies]
# Test-scaffolding ONLY (never linked into the shipped library — CLAUDE.md
# "Tests are scaffolding"). Used by `tests/parser_equivalence_gate.rs` (the
# HLD §6.1 BLOCKER gate) to reproduce the harness tokenizer
# (`benchmark/src/metrics.rs::tokens`) EXACTLY: `split(char::is_whitespace) ->
# drop-empty -> to_lowercase -> NFC`. NFC requires `unicode-normalization`;
# version pinned to "0.1" to match `benchmark/Cargo.toml` so the gate's
# tokeniser is bit-identical to the harness's (HLD §6.1 requires *the harness
# tokenizer semantics*, not an approximation). The gate self-checks this
# mirror against hand-derived vectors so any future drift fails loudly.
unicode-normalization = "0.1"
